2017-06-20 master
- Enhancements:
  - Taskbar: new config option taskbar_hide_different_desktop
  - Battery: new config option bat1_format and bat2_format
  - Battery: new config option battery_full_cmd

2017-06-11 0.14.6
- Fixes:
  - Take into account border width when computing text height
  - Taskbar: Fix task icon size limits
  - Executor: Do not output last line if it is not terminated by newline
- Enhancements:
  - Re-execute tint2 on SIGUSR2.
    This is useful for preserving config options and environment when updating tint2.

2017-05-21 0.14.5
- Fixes:
  - Fixed a couple of memory leaks

2017-04-29 0.14.4
- Fixes:
  - Fix regression in executor (issue #639)
  - Fix crash when _NET_WM_ICON is set but empty (https://github.com/jmc-88/tint3/issues/21)

2017-04-23 0.14.3
- Fixes:
  - Make versioning more robust when building as package
- Enhancements:
  - Tint2conf: Open current tint2 config automatically when started from tint2

2017-03-26 0.14.1
- Fixes:
  - Fixed tint2conf problem under FreeBSD (or generally any system using clang).

2017-03-26 0.14
- Enhancements:
  - New plugin: button.

2017-03-25 0.13.3
- Fixes:
  - Fixed autohide for non-bottom panels (issue #632)
  - Translations updated (contributed by Vladimir)

2017-03-19 0.13.2
- Fixes:
  - Fixed compilation under FreeBSD

2017-03-12 0.13.1
- Fixes:
  - Fixed compilation with new glibc (issue #625)
  - Fixed regression in distributing size between taskbars (issue #628)
  - Create ~/.config dir if it does not exist (issue #629)
- Enhancements:
  - New config option systray_name_filter to hide hide specific apps from the system tray (contributed by Matthew Otnel)
  - Tint2conf: minor improvements

2017-03-04 0.13
- Fixes:
  - Ignore monitors with size 0, fixing crash (issue #618)
  - Battery: support Asus Chromebook Flip C100PA (issue #616)
  - Panel: do not change struts (available screen size) when shown in autohide mode (issue #619)