@@ -326,16 +326,14 @@ void config_write_panel(FILE *fp)
     fprintf(fp, "\n");
 
     fprintf(fp, "panel_monitor = ");
-    if (gtk_combo_box_get_active(GTK_COMBO_BOX(panel_combo_monitor)) == 0) {
+    if (gtk_combo_box_get_active(GTK_COMBO_BOX(panel_combo_monitor)) <= 0) {
         fprintf(fp, "all");
+    } else if (gtk_combo_box_get_active(GTK_COMBO_BOX(panel_combo_monitor)) == 1) {
+        fprintf(fp, "primary");
     } else {
-        fprintf(fp, "%d", gtk_combo_box_get_active(GTK_COMBO_BOX(panel_combo_monitor)));
+        fprintf(fp, "%d", gtk_combo_box_get_active(GTK_COMBO_BOX(panel_combo_monitor)) - 1);
     }
     fprintf(fp, "\n");
-
-    fprintf(fp,
-            "primary_monitor_first = %d\n",
-            gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(panel_primary_monitor_first)) ? 1 : 0);
 
     fprintf(fp, "panel_shrink = %d\n", gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(panel_shrink)) ? 1 : 0);
 
@@ -632,7 +630,11 @@ void config_write_systray(FILE *fp)
             (int)gtk_spin_button_get_value(GTK_SPIN_BUTTON(systray_icon_brightness)));
 
     fprintf(fp, "systray_monitor = ");
-    fprintf(fp, "%d", MAX(1, 1 + gtk_combo_box_get_active(GTK_COMBO_BOX(systray_monitor))));
+    if (gtk_combo_box_get_active(GTK_COMBO_BOX(systray_monitor)) <= 0) {
+        fprintf(fp, "primary");
+    } else {
+        fprintf(fp, "%d", MAX(1, gtk_combo_box_get_active(GTK_COMBO_BOX(systray_monitor))));
+    }
     fprintf(fp, "\n");
 
     fprintf(fp, "systray_name_filter = %s\n", gtk_entry_get_text(GTK_ENTRY(systray_name_filter)));
@@ -1357,20 +1359,20 @@ void add_entry(char *key, char *value)
     } else if (strcmp(key, "panel_monitor") == 0) {
         if (strcmp(value, "all") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 0);
-        else if (strcmp(value, "1") == 0)
+        else if (strcmp(value, "primary") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 1);
-        else if (strcmp(value, "2") == 0)
+        else if (strcmp(value, "1") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 2);
-        else if (strcmp(value, "3") == 0)
+        else if (strcmp(value, "2") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 3);
-        else if (strcmp(value, "4") == 0)
+        else if (strcmp(value, "3") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 4);
-        else if (strcmp(value, "5") == 0)
+        else if (strcmp(value, "4") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 5);
-        else if (strcmp(value, "6") == 0)
+        else if (strcmp(value, "5") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 6);
-    } else if (strcmp(key, "primary_monitor_first") == 0) {
-        gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(panel_primary_monitor_first), atoi(value));
+        else if (strcmp(value, "6") == 0)
+            gtk_combo_box_set_active(GTK_COMBO_BOX(panel_combo_monitor), 7);
     } else if (strcmp(key, "panel_shrink") == 0) {
         gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(panel_shrink), atoi(value));
     }
@@ -1761,18 +1763,20 @@ void add_entry(char *key, char *value)
     } else if (strcmp(key, "systray_icon_size") == 0) {
         gtk_spin_button_set_value(GTK_SPIN_BUTTON(systray_icon_size), atoi(value));
     } else if (strcmp(key, "systray_monitor") == 0) {
-        if (strcmp(value, "1") == 0)
+        if (strcmp(value, "primary") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 0);
-        else if (strcmp(value, "2") == 0)
+        else if (strcmp(value, "1") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 1);
-        else if (strcmp(value, "3") == 0)
+        else if (strcmp(value, "2") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 2);
-        else if (strcmp(value, "4") == 0)
+        else if (strcmp(value, "3") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 3);
-        else if (strcmp(value, "5") == 0)
+        else if (strcmp(value, "4") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 4);
-        else if (strcmp(value, "6") == 0)
+        else if (strcmp(value, "5") == 0)
             gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 5);
+        else if (strcmp(value, "6") == 0)
+            gtk_combo_box_set_active(GTK_COMBO_BOX(systray_monitor), 6);
     } else if (strcmp(key, "systray_icon_asb") == 0) {
         extract_values(value, &value1, &value2, &value3);
         gtk_spin_button_set_value(GTK_SPIN_BUTTON(systray_icon_opacity), atoi(value1));
