@@ -3,6 +3,8 @@
   - Taskbar: new config option taskbar_hide_different_desktop
   - Battery: new config option bat1_format and bat2_format
   - Battery: new config option battery_full_cmd
+- Configuration changes:
+  - Removed primary_monitor_first as it was conflicting with taskbar behavior; use *_monitor = primary instead.
 
 2017-06-11 0.14.6
 - Fixes:
